--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 <meta name="author" content=" FILL ME IN ">
 <title>Ryan Dymock modifications to Portfolio</title>
 
-<link href="css/style.css" rel="stylesheet">
-<link href="css/print.css" rel="stylesheet">
-
-<!--<script src="http://www.google-analytics.com/analytics.js" async></script>
+<script src="http://www.google-analytics.com/analytics.js" async></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -20,19 +17,20 @@
   ga('create', 'UA-65165200-1', 'auto');
   ga('send', 'pageview');
 
-</script>-->
+</script>
 
 <script async src="js/perfmatters.js"></script>
+
 </head>
 
 <body>
 <header> <a href="/"><img src="img/profilepic.jpg"></a>
-  <p>Cameron Pittman<br>
-    <span>Course Developer</span></p>
+  <p>Ryan Dymock<br>
+    <span>Udacity Course Taker</span></p>
 </header>
 <div class="container">
   <div class="hero"> <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br>
-    Contact me: me@email.com </div>
+    Contact me: noresponse@fakeemail.com </div>
   <div class="content">
     <ul>
       <li> <img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100"> <a href="project-2048.html">Build Your Own 2048!</a>
@@ -54,4 +52,6 @@
   <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
 </footer>
 </body>
+<link href="css/style.css" rel="stylesheet">
+<link href="css/print.css" rel="stylesheet" media="print">
 </html>
