Optimize all html pages per PageSpeed Insights

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content=" FILL ME IN ">
-<meta name="author" content=" FILL ME IN ">
-<title>Ryan Dymock modifications to Portfolio</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Information about Project 2048... or something">
+    <meta name="author" content="Anonymous Udacian edited by Ryan Dymock">
+    <title>Ryan Dymock modifications to Portfolio</title>
 
-<script src="http://www.google-analytics.com/analytics.js" async></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -18,6 +17,7 @@
   ga('send', 'pageview');
 
 </script>
+<script src="http://www.google-analytics.com/analytics.js" async></script>
 
 <script async src="js/perfmatters.js"></script>
 
